src/test/ui/binop/issue-11771.rs
fn main() {
    let x = ();
    1 +
    x //~^ ERROR cannot add
    ;

    let x: () = ();
    1 +
    x //~^ ERROR cannot add
    ;
}
